--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "rules": {
         "no-param-reassign": 0,
         "no-restricted-syntax": 0,
-        "no-continue": 0
+        "no-continue": 0,
+        "no-underscore-dangle": 0
     }
 }
