--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,10 +7,87 @@ environment:
     - nodejs_version: "7"
     - nodejs_version: "6"
 
+environment:
+  matrix:
+    - PYTHON: "C:\\Python26"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python27"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python33"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python34"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python35"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python36"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python26-x64"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python27-x64"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python33-x64"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python34-x64"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python35-x64"
+      nodejs_version: "8"
+    - PYTHON: "C:\\Python36-x64"
+      nodejs_version: "8"
+
+    - PYTHON: "C:\\Python26"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python27"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python33"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python34"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python35"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python36"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python26-x64"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python27-x64"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python33-x64"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python34-x64"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python35-x64"
+      nodejs_version: "7"
+    - PYTHON: "C:\\Python36-x64"
+      nodejs_version: "7"
+
+    - PYTHON: "C:\\Python26"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python27"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python33"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python34"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python35"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python36"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python26-x64"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python27-x64"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python33-x64"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python34-x64"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python35-x64"
+      nodejs_version: "6"
+    - PYTHON: "C:\\Python36-x64"
+      nodejs_version: "6"
+
 # Install scripts. (runs after repo cloning)
 install:
   # Prepend Python 3 to the PATH of this build 
-  - "SET PATH=C:\\Python35-x64;C:\\Python35-x64\\Scripts;%PATH%"
+  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version x64
