--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@require-x/python",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Require Python in JS",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -20,6 +20,7 @@
     "bindings": "^1.3.0"
   },
   "devDependencies": {
+    "ava": "^0.22.0",
     "eslint": "^4.4.1",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
