--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
-    "test": "eslint index.js && jest",
+    "test": "eslint index.js && ava",
     "install": "node-gyp rebuild"
   },
   "keywords": [
@@ -23,8 +23,7 @@
     "ava": "^0.22.0",
     "eslint": "^4.4.1",
     "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-plugin-import": "^2.7.0",
-    "jest": "^20.0.4"
+    "eslint-plugin-import": "^2.7.0"
   },
   "repository": {
     "type": "git",
