--- a/.travis.yml
+++ b/.travis.yml
@@ -3,106 +3,108 @@ language: python
 matrix:
   include:
   - python: "2.6"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
   - python: "2.6"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
   - python: "2.6"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
 
   - python: "2.7"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
   - python: "2.7"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
   - python: "2.7"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
 
   - python: "3.3"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
   - python: "3.3"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
   - python: "3.3"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
 
   - python: "3.4"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
   - python: "3.4"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
   - python: "3.4"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
 
   - python: "3.5"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
   - python: "3.5"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
   - python: "3.5"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
 
   - python: "3.6"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
   - python: "3.6"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
   - python: "3.6"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
 
   - python: "2.6"
-    before_install: nvm i 6
-    os: osx
-  - python: "2.6"
-    before_install: nvm i 7
+    env: NODE_VERSION=6
     os: osx
   - python: "2.6"
-    before_install: nvm i 8
+    env: NODE_VERSION=7
+    os: osx
+  - python: "2.6"
+    env: NODE_VERSION=8
     os: osx
 
   - python: "2.7"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
     os: osx
   - python: "2.7"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
     os: osx
   - python: "2.7"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
     os: osx
 
   - python: "3.3"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
     os: osx
   - python: "3.3"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
     os: osx
   - python: "3.3"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
     os: osx
 
   - python: "3.4"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
     os: osx
   - python: "3.4"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
     os: osx
   - python: "3.4"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
     os: osx
 
   - python: "3.5"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
     os: osx
   - python: "3.5"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
     os: osx
   - python: "3.5"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
     os: osx
 
   - python: "3.6"
-    before_install: nvm i 6
+    env: NODE_VERSION=6
     os: osx
   - python: "3.6"
-    before_install: nvm i 7
+    env: NODE_VERSION=7
     os: osx
   - python: "3.6"
-    before_install: nvm i 8
+    env: NODE_VERSION=8
     os: osx
 
 os: linux
+before_install: nvm i $NODE_VERSION
 install: npm i
+script: npm test
