--- a/.travis.yml
+++ b/.travis.yml
@@ -4,105 +4,141 @@ matrix:
   include:
   - python: "2.6"
     env: NODE_VERSION=6
+    install: npm i --python_version=2.6
   - python: "2.6"
     env: NODE_VERSION=7
+    install: npm i --python_version=2.6
   - python: "2.6"
     env: NODE_VERSION=8
+    install: npm i --python_version=2.6
 
   - python: "2.7"
     env: NODE_VERSION=6
+    install: npm i --python_version=2.7
   - python: "2.7"
     env: NODE_VERSION=7
+    install: npm i --python_version=2.7
   - python: "2.7"
     env: NODE_VERSION=8
+    install: npm i --python_version=2.7
 
   - python: "3.3"
     env: NODE_VERSION=6
+    install: npm i --python_version=3.3
   - python: "3.3"
     env: NODE_VERSION=7
+    install: npm i --python_version=3.3
   - python: "3.3"
     env: NODE_VERSION=8
+    install: npm i --python_version=3.3
 
   - python: "3.4"
     env: NODE_VERSION=6
+    install: npm i --python_version=3.4
   - python: "3.4"
     env: NODE_VERSION=7
+    install: npm i --python_version=3.4
   - python: "3.4"
     env: NODE_VERSION=8
+    install: npm i --python_version=3.4
 
   - python: "3.5"
     env: NODE_VERSION=6
+    install: npm i --python_version=3.5
   - python: "3.5"
     env: NODE_VERSION=7
+    install: npm i --python_version=3.5
   - python: "3.5"
     env: NODE_VERSION=8
+    install: npm i --python_version=3.5
 
   - python: "3.6"
     env: NODE_VERSION=6
+    install: npm i --python_version=3.6
   - python: "3.6"
     env: NODE_VERSION=7
+    install: npm i --python_version=3.6
   - python: "3.6"
     env: NODE_VERSION=8
+    install: npm i --python_version=3.6
 
   - python: "2.6"
     env: NODE_VERSION=6
     os: osx
+    install: npm i --python_version=2.6
   - python: "2.6"
     env: NODE_VERSION=7
     os: osx
+    install: npm i --python_version=2.6
   - python: "2.6"
     env: NODE_VERSION=8
     os: osx
+    install: npm i --python_version=2.6
 
   - python: "2.7"
     env: NODE_VERSION=6
     os: osx
+    install: npm i --python_version=2.7
   - python: "2.7"
     env: NODE_VERSION=7
     os: osx
+    install: npm i --python_version=2.7
   - python: "2.7"
     env: NODE_VERSION=8
     os: osx
+    install: npm i --python_version=2.7
 
   - python: "3.3"
     env: NODE_VERSION=6
     os: osx
+    install: npm i --python_version=3.3
   - python: "3.3"
     env: NODE_VERSION=7
     os: osx
+    install: npm i --python_version=3.3
   - python: "3.3"
     env: NODE_VERSION=8
     os: osx
+    install: npm i --python_version=3.3
 
   - python: "3.4"
     env: NODE_VERSION=6
     os: osx
+    install: npm i --python_version=3.4
   - python: "3.4"
     env: NODE_VERSION=7
     os: osx
+    install: npm i --python_version=3.4
   - python: "3.4"
     env: NODE_VERSION=8
     os: osx
+    install: npm i --python_version=3.4
 
   - python: "3.5"
     env: NODE_VERSION=6
     os: osx
+    install: npm i --python_version=3.5
   - python: "3.5"
     env: NODE_VERSION=7
     os: osx
+    install: npm i --python_version=3.5
   - python: "3.5"
     env: NODE_VERSION=8
     os: osx
+    install: npm i --python_version=3.5
 
   - python: "3.6"
     env: NODE_VERSION=6
     os: osx
+    install: npm i --python_version=3.6
   - python: "3.6"
     env: NODE_VERSION=7
     os: osx
+    install: npm i --python_version=3.6
   - python: "3.6"
     env: NODE_VERSION=8
     os: osx
+    install: npm i --python_version=3.6
 
 os: linux
 before_install: nvm i $NODE_VERSION
