--- a/.travis.yml
+++ b/.travis.yml
@@ -43,13 +43,19 @@ matrix:
     install: npm i --python_version=3.4
 
   - python: "3.5"
-    env: NODE_VERSION=6
+    env: 
+    - NODE_VERSION=6
+    - LD_RUN_PATH=/opt/python/3.5.3/lib
     install: npm i --python_version=3.5
   - python: "3.5"
-    env: NODE_VERSION=7
+    env: 
+    - NODE_VERSION=7
+    - LD_RUN_PATH=/opt/python/3.5.3/lib
     install: npm i --python_version=3.5
   - python: "3.5"
-    env: NODE_VERSION=8
+    env: 
+    - NODE_VERSION=8
+    - LD_RUN_PATH=/opt/python/3.5.3/lib
     install: npm i --python_version=3.5
 
   - python: "3.6"
@@ -61,84 +67,50 @@ matrix:
   - python: "3.6"
     env: NODE_VERSION=8
     install: npm i --python_version=3.6
-
-  - python: "2.6"
-    env: NODE_VERSION=6
-    os: osx
-    install: npm i --python_version=2.6
-  - python: "2.6"
-    env: NODE_VERSION=7
-    os: osx
-    install: npm i --python_version=2.6
-  - python: "2.6"
-    env: NODE_VERSION=8
-    os: osx
-    install: npm i --python_version=2.6
 
   - python: "2.7"
-    env: NODE_VERSION=6
+    env:
+    - NODE_VERSION=6
+    - PYTHON_VERSION=2
     os: osx
-    install: npm i --python_version=2.7
+    install: npm i --python_version=2
   - python: "2.7"
-    env: NODE_VERSION=7
+    env:
+    - NODE_VERSION=7
+    - PYTHON_VERSION=2
     os: osx
-    install: npm i --python_version=2.7
+    install: npm i --python_version=2
   - python: "2.7"
-    env: NODE_VERSION=8
+    env:
+    - NODE_VERSION=8
+    - PYTHON_VERSION=2
     os: osx
-    install: npm i --python_version=2.7
-
-  - python: "3.3"
-    env: NODE_VERSION=6
-    os: osx
-    install: npm i --python_version=3.3
-  - python: "3.3"
-    env: NODE_VERSION=7
-    os: osx
-    install: npm i --python_version=3.3
-  - python: "3.3"
-    env: NODE_VERSION=8
-    os: osx
-    install: npm i --python_version=3.3
-
-  - python: "3.4"
-    env: NODE_VERSION=6
-    os: osx
-    install: npm i --python_version=3.4
-  - python: "3.4"
-    env: NODE_VERSION=7
-    os: osx
-    install: npm i --python_version=3.4
-  - python: "3.4"
-    env: NODE_VERSION=8
-    os: osx
-    install: npm i --python_version=3.4
-
-  - python: "3.5"
-    env: NODE_VERSION=6
-    os: osx
-    install: npm i --python_version=3.5
-  - python: "3.5"
-    env: NODE_VERSION=7
-    os: osx
-    install: npm i --python_version=3.5
-  - python: "3.5"
-    env: NODE_VERSION=8
-    os: osx
-    install: npm i --python_version=3.5
+    install: npm i --python_version=2
 
   - python: "3.6"
-    env: NODE_VERSION=6
+    env:
+    - NODE_VERSION=6
+    - PYTHON_VERSION=3
     os: osx
-    install: npm i --python_version=3.6
+    install: 
+    - brew install python3
+    - npm i --python_version=3
   - python: "3.6"
-    env: NODE_VERSION=7
+    env:
+    - NODE_VERSION=7
+    - PYTHON_VERSION=3
     os: osx
-    install: npm i --python_version=3.6
+    install: 
+    - brew install python3
+    - npm i --python_version=3
   - python: "3.6"
-    env: NODE_VERSION=8
+    env:
+    - NODE_VERSION=8
+    - PYTHON_VERSION=3
     os: osx
-    install: npm i --python_version=3.6
+    install: 
+    - brew install python3
+    - npm i --python_version=3
 
 os: linux
 before_install: nvm i $NODE_VERSION
