--- a/.travis.yml
+++ b/.travis.yml
@@ -58,24 +58,27 @@ matrix:
     - LD_RUN_PATH=/opt/python/3.5.3/lib
     install: npm i --python_version=3.5
 
-  - python: "3.6.2"
-    env: 
+  - env: 
     - NODE_VERSION=6
-    - LD_LIBRARY_PATH=/opt/python/3.6.2/lib
-    before_install: node python-config.js python3.6-config --cflags
     install: npm i --python_version=3.6
-  - python: "3.6.2"
-    env: 
+    addons:
+      apt:
+        packages:
+        - python3.6 python3.6-config
+  - env: 
     - NODE_VERSION=7
-    - LD_LIBRARY_PATH=/opt/python/3.6.2/lib
-    before_install: node python-config.js python3.6-config --cflags
     install: npm i --python_version=3.6
-  - python: "3.6.2"
-    env: 
+    addons:
+      apt:
+        packages:
+        - python3.6 python3.6-config
+  - env: 
     - NODE_VERSION=8
-    - LD_LIBRARY_PATH=/opt/python/3.6.2/lib
-    before_install: node python-config.js python3.6-config --cflags
     install: npm i --python_version=3.6
+    addons:
+      apt:
+        packages:
+        - python3.6 python3.6-config
 
   - env:
     - NODE_VERSION=6
@@ -125,3 +128,7 @@ os: linux
 before_install: nvm i $NODE_VERSION
 install: npm i
 script: npm test
+addons:
+  apt:
+    sources:
+    - deadsnakes
