--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ matrix:
         sources:
         - deadsnakes
         packages:
-        - python3.6 python3.6-config
+        - python3.6 python3.6-dev
   - env: 
     - NODE_VERSION=7
     install: npm i --python_version=3.6
@@ -75,7 +75,7 @@ matrix:
         sources:
         - deadsnakes
         packages:
-        - python3.6 python3.6-config
+        - python3.6 python3.6-dev
   - env: 
     - NODE_VERSION=8
     install: npm i --python_version=3.6
@@ -84,7 +84,7 @@ matrix:
         sources:
         - deadsnakes
         packages:
-        - python3.6 python3.6-config
+        - python3.6 python3.6-dev
 
   - env:
     - NODE_VERSION=6
