--- a/.travis.yml
+++ b/.travis.yml
@@ -1,93 +1,66 @@
-language: python
+language: node_js
 
 matrix:
   include:
-  - python: "2.6"
-    env: NODE_VERSION=6
+  - node_js: '6'
+    env: PYTHON_VERSION=2.6
     install: npm i --python_version=2.6
-  - python: "2.6"
-    env: NODE_VERSION=7
+  - node_js: '7'
+    env:  PYTHON_VERSION=2.6
     install: npm i --python_version=2.6
-  - python: "2.6"
-    env: NODE_VERSION=8
+  - node_js: '8'
+    env: PYTHON_VERSION=2.6
     install: npm i --python_version=2.6
 
-  - python: "2.7"
-    env: NODE_VERSION=6
+  - node_js: '6'
+    env: PYTHON_VERSION=2.7
     install: npm i --python_version=2.7
-  - python: "2.7"
-    env: NODE_VERSION=7
+  - node_js: '7'
+    env:  PYTHON_VERSION=2.7
     install: npm i --python_version=2.7
-  - python: "2.7"
-    env: NODE_VERSION=8
+  - node_js: '8'
+    env: PYTHON_VERSION=2.7
     install: npm i --python_version=2.7
 
-  - python: "3.3"
-    env: NODE_VERSION=6
+  - node_js: '6'
+    env: PYTHON_VERSION=3.3
     install: npm i --python_version=3.3
-  - python: "3.3"
-    env: NODE_VERSION=7
+  - node_js: '7'
+    env:  PYTHON_VERSION=3.3
     install: npm i --python_version=3.3
-  - python: "3.3"
-    env: NODE_VERSION=8
+  - node_js: '8'
+    env: PYTHON_VERSION=3.3
     install: npm i --python_version=3.3
 
-  - python: "3.4"
-    env: NODE_VERSION=6
+  - node_js: '6'
+    env: PYTHON_VERSION=3.4
     install: npm i --python_version=3.4
-  - python: "3.4"
-    env: NODE_VERSION=7
+  - node_js: '7'
+    env:  PYTHON_VERSION=3.4
     install: npm i --python_version=3.4
-  - python: "3.4"
-    env: NODE_VERSION=8
+  - node_js: '8'
+    env: PYTHON_VERSION=3.4
     install: npm i --python_version=3.4
 
-  - python: "3.5.3"
-    env: 
-    - NODE_VERSION=6
-    - LD_RUN_PATH=/opt/python/3.5.3/lib
+  - node_js: '6'
+    env: PYTHON_VERSION=3.5
     install: npm i --python_version=3.5
-  - python: "3.5.3"
-    env: 
-    - NODE_VERSION=7
-    - LD_RUN_PATH=/opt/python/3.5.3/lib
+  - node_js: '7'
+    env:  PYTHON_VERSION=3.5
     install: npm i --python_version=3.5
-  - python: "3.5.3"
-    env: 
-    - NODE_VERSION=8
-    - LD_RUN_PATH=/opt/python/3.5.3/lib
+  - node_js: '8'
+    env: PYTHON_VERSION=3.5
     install: npm i --python_version=3.5
 
-  - env: 
-    - NODE_VERSION=6
+  - node_js: '6'
+    env: PYTHON_VERSION=3.6
     install: npm i --python_version=3.6
-    language: node_js
-    addons:
-      apt:
-        sources:
-        - deadsnakes
-        packages:
-        - python3.6 python3.6-dev
-  - env: 
-    - NODE_VERSION=7
+  - node_js: '7'
+    env:  PYTHON_VERSION=3.6
     install: npm i --python_version=3.6
-    language: node_js
-    addons:
-      apt:
-        sources:
-        - deadsnakes
-        packages:
-        - python3.6 python3.6-dev
-  - env: 
-    - NODE_VERSION=8
+  - node_js: '8'
+    env: PYTHON_VERSION=3.6
     install: npm i --python_version=3.6
-    language: node_js
-    addons:
-      apt:
-        sources:
-        - deadsnakes
-        packages:
-        - python3.6 python3.6-dev
 
   - env:
     - NODE_VERSION=6
@@ -134,6 +107,11 @@ matrix:
     language: node_js
 
 os: linux
-before_install: nvm i $NODE_VERSION
 install: npm i
 script: npm test
+addons:
+  apt:
+    sources:
+    - deadsnakes
+    packages:
+    - python$PYTHON_VERSION python$PYTHON_VERSION-dev
