--- a/.travis.yml
+++ b/.travis.yml
@@ -4,63 +4,153 @@ matrix:
   include:
   - node_js: '6'
     env: PYTHON_VERSION=2.6
-    install: npm i --python_version=2.6
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python2.6 python2.6-dev
   - node_js: '7'
     env:  PYTHON_VERSION=2.6
-    install: npm i --python_version=2.6
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python2.6 python2.6-dev
   - node_js: '8'
     env: PYTHON_VERSION=2.6
-    install: npm i --python_version=2.6
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python2.6 python2.6-dev
 
   - node_js: '6'
     env: PYTHON_VERSION=2.7
-    install: npm i --python_version=2.7
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python2.7 python2.7-dev
   - node_js: '7'
     env:  PYTHON_VERSION=2.7
-    install: npm i --python_version=2.7
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python2.7 python2.7-dev
   - node_js: '8'
     env: PYTHON_VERSION=2.7
-    install: npm i --python_version=2.7
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python2.7 python2.7-dev
 
   - node_js: '6'
     env: PYTHON_VERSION=3.3
-    install: npm i --python_version=3.3
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.3 python3.3-dev
   - node_js: '7'
     env:  PYTHON_VERSION=3.3
-    install: npm i --python_version=3.3
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.3 python3.3-dev
   - node_js: '8'
     env: PYTHON_VERSION=3.3
-    install: npm i --python_version=3.3
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.3 python3.3-dev
 
   - node_js: '6'
     env: PYTHON_VERSION=3.4
-    install: npm i --python_version=3.4
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.4 python3.4-dev
   - node_js: '7'
     env:  PYTHON_VERSION=3.4
-    install: npm i --python_version=3.4
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.4 python3.4-dev
   - node_js: '8'
     env: PYTHON_VERSION=3.4
-    install: npm i --python_version=3.4
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.4 python3.4-dev
 
   - node_js: '6'
     env: PYTHON_VERSION=3.5
-    install: npm i --python_version=3.5
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.5 python3.5-dev
   - node_js: '7'
     env:  PYTHON_VERSION=3.5
-    install: npm i --python_version=3.5
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.5 python3.5-dev
   - node_js: '8'
     env: PYTHON_VERSION=3.5
-    install: npm i --python_version=3.5
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.5 python3.5-dev
 
   - node_js: '6'
     env: PYTHON_VERSION=3.6
-    install: npm i --python_version=3.6
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.6 python3.6-dev
   - node_js: '7'
     env:  PYTHON_VERSION=3.6
-    install: npm i --python_version=3.6
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.6 python3.6-dev
   - node_js: '8'
     env: PYTHON_VERSION=3.6
-    install: npm i --python_version=3.6
+    addons:
+      apt:
+        sources:
+        - deadsnakes
+        packages:
+        - python3.6 python3.6-dev
 
   - env:
     - NODE_VERSION=6
@@ -107,7 +197,7 @@ matrix:
     language: node_js
 
 os: linux
-install: npm i
+install: npm i --python_version=$PYTHON_VERSION
 script: npm test
 addons:
   apt:
